# quiz_app

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 062c44a6a548_refactoring_created_at_field.py
src/: Dockerfile  app.py  config.py  run.py
src/db/: __init__.py  crud.py  db.py  models.py  schemas.py
src/routes/: endpoints.py
src/services/: service.py
src/utils/: utils.py
